

Name: Segue ChangeLog


v. 1.0.4 (2003-11-13)
----------------------------------------------------
		
	* Change: Fixed a bug in the 1.0.3 permissions checking that prevented institution users from accessing sites. (Adam Franco)
	
v. 1.0.3 (2003-11-12)
----------------------------------------------------
		
	* Change: Default page and permissions checking re-written to be faster. (Dobo Radichkov)
		
	* Change: Permissions window now has Save/Cancel buttons at the top of the window. (Adam Franco)
		
	**** IMPORTANT *** Change: Segue expects that usernames are all lower-case. Checks are in place to force the creation of lowercase usernames when adding users, but if you are using a custom authentication modules, these checks may be bypassed and you should check that usernames in your user table are lower-case if you see strange problems with permissions. (Adam Franco)
		
	* New feature: Addition of an update framework for applying database updates in Segue. When templates/database updates are in a release, they will appear in the &quot;Segue Updates&quot; section of the &quot;admin tools&quot;. (Adam Franco)
		
	* Change: Two new site templates: &quot;Advanced: Single Section&quot; and &quot;Advanced: Blank&quot;. (Alex Chapin)
		
	**** IMPORTANT *** Change: New templates have been added. To create the new templates, log in as an administrator, then go to 'admin tools' --&gt; 'segue updates' and run the 1.0.3 update if needed. (Adam Franco)
		
	* Change: Discussions now appear in-line instead of in a popup window. (Alex Chapin)
		
	* Change: Admin screens for users, classes, slots, and logs now have improved searching and pagination. (Alex Chapin)
		
	* Bug Fix: #776452 Anonymous/Unauthenticated discussions are now working. (Gabe Schine)
		
	* Bug Fix: #809335 Class groups not listed from members (Adam Franco)
		