@@ -4,9 +4,15 @@
 	h1 {font-size: 18pt;}
 	li {padding-bottom: 3px;}
 	</style><div style="font-family: Verdana; font-size: 12px;"><h1>Segue ChangeLog</h1><h2>Version 1.0.4</h2><h3>2003-11-13</h3><ul>
-		<li/> Change:  
+		<li/> Bug Fix:
+	 
 			Fixed a bug in the 1.0.3 permissions checking that prevented 
 			institution users from accessing sites.
+		 (<i>Adam Franco</i>)
+		<li/> Bug Fix:
+	 
+			Fixed a bug in fetching of sites where a user is editor, so that a
+			database connection is guaranteed.
 		 (<i>Adam Franco</i>)
 	</ul><br/><h2>Version 1.0.3</h2><h3>2003-11-12</h3><ul>
 		<li/> Change:  
